# complate-sample-cpp

./: .gitignore  CMakeLists.txt  README.md  faucet.config.js  package-lock.json  package.json
.github/workflows/: build.yml
cmake/: Complate.cmake  CppHttplib.cmake
src/: CMakeLists.txt  errorcontroller.cpp  errorcontroller.h  main.cpp  person.cpp  person.h  resources.cpp  resources.h
views/: index.js  profile.jsx
views/components/: alert.jsx  layout.jsx  navbar.jsx  shell.jsx
